Modifying HermanUrlStreamHandler to simply throw a MalformedUrlException when encountering a url without a sub-protocol, instead of a IOError.  Fixes #14.